Fixed issue with filter label collapsing after click

--- a/frontend/src/Components/Glyphs.css
+++ b/frontend/src/Components/Glyphs.css
@@ -59,8 +59,13 @@
   z-index: 10;  
 }
 
+#checkboxes {
+  width: 200px;
+  z-index: 400;
+  margin-left: 5px;
+}
+
 .dropdown-check-list {
-  
   font-size: .9em;
   margin: 30px 14px 0px 0px;
   max-height: 30px;
@@ -72,7 +77,7 @@
   position: relative;
   cursor: pointer;
   display: inline-block;
-  padding: 5px 70px 5px 10px;
+  padding: 5px 115px 5px 0px;
 }
 
 .dropdown-check-list .anchor:after {
@@ -81,7 +86,7 @@
   border-left: 2px solid black;
   border-top: 2px solid black;
   padding: 5px;
-  right: 10px;
+  right: 2px;
   top: 20%;
   -moz-transform: rotate(-135deg);
   -ms-transform: rotate(-135deg);
@@ -90,8 +95,11 @@
   transform: rotate(-135deg);
 }
 
+.anchor:after {
+  width: 0.05em;
+}
+
 .dropdown-check-list .anchor:active:after {
-  right: 8px;
   top: 21%;
 }
 
@@ -99,7 +107,6 @@
   padding: 2px;
   display: none;
   margin: 0;
-  border: 1px solid #ccc;
   border-top: none;
 }
 
@@ -108,9 +115,8 @@
 }
 
 ul.items {
-  max-width: 150px;
+  max-width: 200px;
   white-space: wrap;
   background: white;
-  z-index: 100;
 }
 
